--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!--arrayadapter-->
+        <activity android:name="com.example.jpr.basicstest.activity.ArrayAdapterTest"></activity>
+        <!--popwindow-->
+        <activity android:name="com.example.jpr.basicstest.activity.PopWindowActivity"></activity>
     </application>
 
 </manifest>
